Fixed navbar collapse issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,10 +56,7 @@ body {
   border-radius: 25px;
   box-shadow: 4px 4px var(--accent-color-3)
 }
-.navbar-nav li {
-  display: inline-block;
-  margin-left: 15px;
-}
+
 .nav-link {
   font-family: var(--font-family-normal);
   font-size: var(--font-size-normal);
@@ -85,7 +82,7 @@ body {
   justify-content: space-evenly;
   width: 60%;
   min-width: 670px;
-  height: 250px;
+  height: 350px;
   padding: 10px;
   box-shadow: 5px 5px 5px black;
 }
@@ -103,6 +100,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+
 .bio h1 {
   font-family: var(--font-family-normal);
   font-size: var(--font-size-title);
@@ -110,6 +108,11 @@ body {
 }
 .bio p {
   font-family: var(--font-family-normal);
+  font-size: var(--font-size-normal);
+  font-weight: var(--font-weight-normal);
+}
+.bio a {
+    font-family: var(--font-family-normal);
   font-size: var(--font-size-normal);
   font-weight: var(--font-weight-normal);
 }
